--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
+*.iml
+.Idea/*
+target
 dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+.DS_Store
+*/.DS_Store
+*/.Idea
